Added: Build CI deployment to GH pages

--- a/static/projects.json
+++ b/static/projects.json
@@ -87,7 +87,7 @@
     {
       "title": "✨ Wishes",
       "description": "I want to own any of these in the near future",
-      "specifications": ["Subaru Impreza GC/GF Turbo", "Nissan Silvia S13", "Honda Civic EK9", "Lancia Delta Integrale", "Volvo 240", "Mazda RX7 FC"]
+      "specifications": ["Subaru Impreza GC/GF Turbo", "Nissan Silvia S13", "Honda Civic EK9", "Lancia Delta Integrale", "Volvo 240 Wagon", "Mazda RX7 FC"]
     }
   ]
 }
