--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,12 @@ jobs:
       - name: Build SvelteKit project with Bun
         run: bun run build
 
+      - name: Add CNAME file
+        run: echo "cata.moe" > ./CNAME
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
+          cname: cata.moe
