Enhances project card with more tech icons
Expands the range of technology icons available for project cards, providing better visual representation of the technologies used in each project.

Also sorts the tech stack for consistent display.

Updates a project's tech stack in the json data.

--- a/static/projects.json
+++ b/static/projects.json
@@ -89,8 +89,12 @@
         "ASP.NET",
         "API",
         ".NET",
-        "JavaScript",
-        "Bootstrap"
+        "EFCore",
+        "Docker",
+        "Leaflet",
+        "TypeScript",
+        "Bootstrap",
+        "MariaDB"
       ],
       "screens": [],
       "repoLink": "https://github.com/CataDev0/IS202-AspNet2308"
